--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/pvc.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/pvc.yaml
@@ -1,64 +1,161 @@
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    app: xpipe-v1-web-portal
-  name: xpipe-v1-web-portal-static-pvc
-  namespace: xpipe-dorjecurreli
-#provisioner: kubernetes.io/aws-ebs
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests:
-      storage: 8Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    app: xpipe-v1-web-portal
-  name: xpipe-v1-web-portal-media-pvc
-  namespace: xpipe-dorjecurreli
-#provisioner: kubernetes.io/aws-ebs
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests:
-      storage: 8Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    app: xpipe-v1-web-portal
-  name: xpipe-v1-web-portal-generated-pvc
-  namespace: xpipe-dorjecurreli
-#provisioner: kubernetes.io/aws-ebs
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests:
-      storage: 1Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  labels:
-    app: xpipe-v1-web-portal
-  name: xpipe-v1-web-portal-var-pvc
-  namespace: xpipe-dorjecurreli
-#provisioner: kubernetes.io/aws-ebs
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests:
-      storage: 8Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-src-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 8Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-core-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 128Mi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-academy-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 128Mi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-ai-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 128Mi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-cmdb-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 128Mi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-cms-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 128Mi
+
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-static-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 8Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-media-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 8Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-generated-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 1Gi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: xpipe-v1-web-portal
+#  name: xpipe-v1-web-portal-var-pvc
+#  namespace: xpipe-lucapitzoi
+##provisioner: kubernetes.io/aws-ebs
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 8Gi
