--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/configmap.yaml
@@ -2,29 +2,34 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xpipe-v1-web-portal-config
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 data:
-  XPIPE_CORE_ECOMMERCE_CDN_STATIC: "https://cdn-static-cloud-xpipe-v1-web-portal.sindria.org"
-  XPIPE_CORE_ECOMMERCE_CDN_MEDIA: "https://cdn-media-cloud-xpipe-v1-web-portal.sindria.org"
-  # Core envs
+  # Magento
+  MAGENTO_CDN_STATIC: "https://cdn-static-cloud-xpipe-v1-web-portal.sindria.org"
+  MAGENTO_CDN_MEDIA: "https://cdn-media-cloud-xpipe-v1-web-portal.sindria.org"
+  # Core
+  CORE_SSO_BASE_URL: "https://dev-auth-xpipe.sindria.org"
+  CORE_SSO_BASE_URL_LEGACY: "https://dev-auth-xpipe.sindria.org/auth"
+  CORE_SSO_REALM: "sindria"
   CORE_PRODUCT_NAME: "XPipe"
   CORE_PRODUCT_VERSION: "1.0"
   CORE_STOREVIEW_ITALIAN_TOGGLE: "1"
-  # Fnd envs
-  FND_COLLECTOR_BASE_URL: "http://172.16.10.100"
-  # Iam envs
-  IAM_COLLECTOR_BASE_URL: "http://172.16.10.101"
-  # Pipelines envs
-  PIPELINES_COLLECTOR_BASE_URL: "http://172.16.10.102"
-  # Lab envs
-  LAB_COLLECTOR_BASE_URL: "http://172.16.10.103"
+  # Fnd
+  FND_COLLECTOR_BASE_URL: "https://lucapitzoi-fnd-api-xpipe.sindria.org"
+  # Iam
+  IAM_COLLECTOR_BASE_URL: "https://lucapitzoi-iam-api-xpipe.sindria.org"
+  # Pipelines
+  PIPELINES_COLLECTOR_BASE_URL: "https://lucapitzoi-pipelines-api-xpipe.sindria.org"
+  PIPELINES_CONFIGMAP_VAULT_BASE_URL: "https://dev-vault-xpipe.sindria.org"
+  # Lab
+  LAB_COLLECTOR_BASE_URL: "https://lucapitzoi-lab-api-xpipe.sindria.org"
 
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xpipe-v1-web-portal-media-config
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 data:
   AWS_DEFAULT_REGION: "eu-central-1"
 ---
@@ -32,7 +37,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xpipe-v1-web-portal-backup-config
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 data:
   AWS_DEFAULT_REGION: "eu-central-1"
   APP_NAME: "xpipe-v1-web-portal"
