--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/cronjob.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/cronjob.yaml
@@ -1,55 +1,55 @@
----
-apiVersion: batch/v1
-kind: CronJob
-metadata:
-  name: magento-media-sync
-  namespace: xpipe-dorjecurreli
-spec:
-  schedule: "* * * * *"  # ogni minuto
-  jobTemplate:
-    spec:
-      ttlSecondsAfterFinished: 120
-      backoffLimit: 1
-      template:
-        spec:
-          restartPolicy: OnFailure
-          containers:
-          - name: media-sync
-            image: amazon/aws-cli:2.13.6
-            command:
-              - sh
-              - -c
-              - |
-                echo "Starting media sync to S3..."
-                aws s3 sync /var/www/app/pub/media s3://$MEDIA_BUCKET_NAME --exact-timestamps
-            env:
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: xpipe-v1-web-portal-media-secret
-                  key: AWS_ACCESS_KEY_ID
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: xpipe-v1-web-portal-media-secret
-                  key: AWS_SECRET_ACCESS_KEY
-            - name: MEDIA_BUCKET_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: xpipe-v1-web-portal-media-secret
-                  key: MEDIA_BUCKET_NAME
-            - name: AWS_DEFAULT_REGION
-              valueFrom:
-                configMapKeyRef:
-                  name: xpipe-v1-web-portal-media-config
-                  key: AWS_DEFAULT_REGION
-            volumeMounts:
-            - name: magento-media
-              mountPath: /var/www/app/pub/media
-          volumes:
-          - name: magento-media
-            persistentVolumeClaim:
-              claimName: xpipe-v1-web-portal-media-pvc
+#---
+#apiVersion: batch/v1
+#kind: CronJob
+#metadata:
+#  name: magento-media-sync
+#  namespace: xpipe-dorjecurreli
+#spec:
+#  schedule: "* * * * *"  # ogni minuto
+#  jobTemplate:
+#    spec:
+#      ttlSecondsAfterFinished: 120
+#      backoffLimit: 1
+#      template:
+#        spec:
+#          restartPolicy: OnFailure
+#          containers:
+#          - name: media-sync
+#            image: amazon/aws-cli:2.13.6
+#            command:
+#              - sh
+#              - -c
+#              - |
+#                echo "Starting media sync to S3..."
+#                aws s3 sync /var/www/app/pub/media s3://$MEDIA_BUCKET_NAME --exact-timestamps
+#            env:
+#            - name: AWS_ACCESS_KEY_ID
+#              valueFrom:
+#                secretKeyRef:
+#                  name: xpipe-v1-web-portal-media-secret
+#                  key: AWS_ACCESS_KEY_ID
+#            - name: AWS_SECRET_ACCESS_KEY
+#              valueFrom:
+#                secretKeyRef:
+#                  name: xpipe-v1-web-portal-media-secret
+#                  key: AWS_SECRET_ACCESS_KEY
+#            - name: MEDIA_BUCKET_NAME
+#              valueFrom:
+#                secretKeyRef:
+#                  name: xpipe-v1-web-portal-media-secret
+#                  key: MEDIA_BUCKET_NAME
+#            - name: AWS_DEFAULT_REGION
+#              valueFrom:
+#                configMapKeyRef:
+#                  name: xpipe-v1-web-portal-media-config
+#                  key: AWS_DEFAULT_REGION
+#            volumeMounts:
+#            - name: magento-media
+#              mountPath: /var/www/app/pub/media
+#          volumes:
+#          - name: magento-media
+#            persistentVolumeClaim:
+#              claimName: xpipe-v1-web-portal-media-pvc
 ---
 apiVersion: batch/v1
 kind: CronJob
