--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/db.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/db.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xpipe-v1-web-portal-db-config
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 data:
   MYSQL_MAX_CONNECTIONS: "500"
 ---
@@ -11,7 +11,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: xpipe-v1-web-portal-db-secret
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 stringData:
   MYSQL_ROOT_PASSWORD: "secret"
   MYSQL_DATABASE: "app"
@@ -24,7 +24,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-db
   name: xpipe-v1-web-portal-db-pvc
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -40,7 +40,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-db
   name: xpipe-v1-web-portal-db
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -172,7 +172,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-db
   name: xpipe-v1-web-portal-db
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 spec:
   ports:
   - name: mysql
