--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/idx.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/idx.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xpipe-v1-web-portal-idx-config
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 data:
   ES_JAVA_OPTS: "-Xmx1024m -Xms1024m"
   cluster.name: "xpipe-v1-web-portal"
@@ -16,7 +16,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: xpipe-v1-web-portal-idx-secret
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 stringData:
   ELASTIC_PASSWORD: "secret"
 ---
@@ -26,7 +26,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-idx
   name: xpipe-v1-web-portal-idx-pvc
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -42,7 +42,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-idx
   name: xpipe-v1-web-portal-idx
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -171,7 +171,7 @@ metadata:
   labels:
     app: xpipe-v1-web-portal-idx
   name: xpipe-v1-web-portal-idx
-  namespace: xpipe-dorjecurreli
+  namespace: xpipe-lucapitzoi
 spec:
   ports:
   - name: elasticsearch
