--- a/IaC/xpipe-lucapitzoi/lab-v1-env-xdev/pvc.yaml
+++ b/IaC/xpipe-lucapitzoi/lab-v1-env-xdev/pvc.yaml
@@ -25,7 +25,7 @@ metadata:
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: longhorn
   resources:
     requests:
