--- a/IaC/xpipe-dorjecurreli/lab-v1-env-xdev/configmap.yaml
+++ b/IaC/xpipe-dorjecurreli/lab-v1-env-xdev/configmap.yaml
@@ -12,8 +12,8 @@ data:
   XDEV_WEB_PORT: "8080"
   XDEV_VNC_HOST: "localhost"
   XDEV_VNC_PORT: "5901"
-  GIT_USERNAME: "dorjecurreli"
-  GIT_EMAIL: "dorje.curreli@sindria.org"
+  GIT_USERNAME: "dorcurreli"
+  GIT_EMAIL: "dor.curreli@gmail.com"
   GIT_EDITOR: "vim"
   GIT_SINDRIA_PATH: "/home/sindria/Projects/Sindria"
   GIT_SINDRIA_URL: "https://git.sindria.org"
