--- a/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/deployment.yaml
+++ b/IaC/xpipe-lucapitzoi/xpipe-v1-web-portal/deployment.yaml
@@ -22,40 +22,41 @@ spec:
       labels:
         app: xpipe-v1-web-portal
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: "wopr-lab-ph-lnx-wrk-1.sindria.corp"
       imagePullSecrets:
       - name: sindria-dockerhub
-#      initContainers:
-#        - name: init-jetbrains
-#          image: busybox
-#          command: [ "sh", "-c", "chown -R 1000:1000 /home/sindria/.cache/JetBrains" ]
-#          volumeMounts:
-#            - mountPath: /home/sindria/.cache/JetBrains
-#              name: xpipe-jetbrains-cache-volume
-
-#        - name: init-static
-#          image: busybox
-#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/static" ]
-#          volumeMounts:
-#            - mountPath: /var/www/app/pub/static
-#              name: xpipe-v1-web-portal-static-volume
-#        - name: init-media
-#          image: busybox
-#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/media" ]
-#          volumeMounts:
-#            - mountPath: /var/www/app/pub/media
-#              name: xpipe-v1-web-portal-media-volume
-#        - name: init-generated
-#          image: busybox
-#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/generated" ]
-#          volumeMounts:
-#            - mountPath: /var/www/app/generated
-#              name: xpipe-v1-web-portal-generated-volume
-#        - name: init-var
-#          image: busybox
-#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/var" ]
-#          volumeMounts:
-#            - mountPath: /var/www/app/var
-#              name: xpipe-v1-web-portal-var-volume
+      initContainers:
+        - name: init-static
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/static" ]
+          volumeMounts:
+            - mountPath: /var/www/app/pub/static
+              name: xpipe-v1-web-portal-static-volume
+        - name: init-media
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/media" ]
+          volumeMounts:
+            - mountPath: /var/www/app/pub/media
+              name: xpipe-v1-web-portal-media-volume
+        - name: init-generated
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/generated" ]
+          volumeMounts:
+            - mountPath: /var/www/app/generated
+              name: xpipe-v1-web-portal-generated-volume
+        - name: init-var
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/var" ]
+          volumeMounts:
+            - mountPath: /var/www/app/var
+              name: xpipe-v1-web-portal-var-volume
+        - name: init-vendor
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/vendor" ]
+          volumeMounts:
+            - mountPath: /var/www/app/vendor
+              name: xpipe-v1-web-portal-vendor-volume
       containers:
       - env:
         # Magento Config
@@ -315,79 +316,100 @@ spec:
         - mountPath: /var/www/app
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Products/XPipe/V1/xpipe-v1-web-portal/src
+          readOnly: true
         - mountPath: /var/www/app/app/code/Core
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Core/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Academy
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Academy/V1/Module
+          readOnly: true
         #- mountPath: /var/www/app/app/code/Ai
         #  name: lab-v1-env-xdev-xpipe-volume
         #  subPath: Ai/V1/Module
+        #  readOnly: true
         - mountPath: /var/www/app/app/code/Cmdb
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Cmdb/V1/Module
+          readOnly: true
         #- mountPath: /var/www/app/app/code/Cms
         #  name: lab-v1-env-xdev-xpipe-volume
         #  subPath: Cms/V1/Module
+        #  readOnly: true
         - mountPath: /var/www/app/app/code/Crm
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Crm/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Docs
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Docs/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Iam
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Iam/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Lab
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Lab/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Logging
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Logging/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Monitoring
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Monitoring/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Pipelines
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Pipelines/V1/Module
+          readOnly: true
         - mountPath: /var/www/app/app/code/Security
           name: lab-v1-env-xdev-xpipe-volume
           subPath: Security/V1/Module
+          readOnly: true
 
-#        - mountPath: /var/www/app/pub/static
-#          name: xpipe-v1-web-portal-static-volume
-#        - mountPath: /var/www/app/pub/media
-#          name: xpipe-v1-web-portal-media-volume
-#        - mountPath: /var/www/app/generated
-#          name: xpipe-v1-web-portal-generated-volume
-#        - mountPath: /var/www/app/var
-#          name: xpipe-v1-web-portal-var-volume
+        - mountPath: /var/www/app/pub/static
+          name: xpipe-v1-web-portal-static-volume
+        - mountPath: /var/www/app/pub/media
+          name: xpipe-v1-web-portal-media-volume
+        - mountPath: /var/www/app/generated
+          name: xpipe-v1-web-portal-generated-volume
+        - mountPath: /var/www/app/var
+          name: xpipe-v1-web-portal-var-volume
+        - mountPath: /var/www/app/vendor
+          name: xpipe-v1-web-portal-vendor-volume
       dnsPolicy: ClusterFirst
       #hostNetwork: true
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
+      # Monorepo
       - name: lab-v1-env-xdev-xpipe-volume
         persistentVolumeClaim:
           claimName: lab-v1-env-xdev-xpipe-pvc
           #defaultMode: 420
 
-#      - name: xpipe-v1-web-portal-static-volume
-#        persistentVolumeClaim:
-#          claimName: xpipe-v1-web-portal-static-pvc
-#          #defaultMode: 420
-#      - name: xpipe-v1-web-portal-media-volume
-#        persistentVolumeClaim:
-#          claimName: xpipe-v1-web-portal-media-pvc
-#          #defaultMode: 420
-#      - name: xpipe-v1-web-portal-generated-volume
-#        persistentVolumeClaim:
-#          claimName: xpipe-v1-web-portal-generated-pvc
-#          #defaultMode: 420
-#      - name: xpipe-v1-web-portal-var-volume
-#        persistentVolumeClaim:
-#          claimName: xpipe-v1-web-portal-var-pvc
-#          #defaultMode: 420
+      - name: xpipe-v1-web-portal-static-volume
+        persistentVolumeClaim:
+          claimName: xpipe-v1-web-portal-static-pvc
+          #defaultMode: 420
+      - name: xpipe-v1-web-portal-media-volume
+        persistentVolumeClaim:
+          claimName: xpipe-v1-web-portal-media-pvc
+          #defaultMode: 420
+      - name: xpipe-v1-web-portal-generated-volume
+        persistentVolumeClaim:
+          claimName: xpipe-v1-web-portal-generated-pvc
+          #defaultMode: 420
+      - name: xpipe-v1-web-portal-var-volume
+        persistentVolumeClaim:
+          claimName: xpipe-v1-web-portal-var-pvc
+          #defaultMode: 420
+      - name: xpipe-v1-web-portal-vendor-volume
+        persistentVolumeClaim:
+          claimName: xpipe-v1-web-portal-vendor-pvc
+          #defaultMode: 420
 ---
